--- a/Frontend.org
+++ b/Frontend.org
@@ -1,6 +1,6 @@
 * 前端
 ** 介绍
-- 我们欢迎新鲜血液的加入，将我们的大前端部分变得更好
+- 我们欢迎新鲜血液的加入，将我们的大前端部门变得更好
 - 我们目前的技术栈包括但不限于 [[https://angularjs.org][AngularJS]], [[https://suitcss.github.io/][SUIT CSS]], [[http://gulpjs.com/][gulp.js]], [[http://bower.io/][Bower]]
 - 我们有良好的代码 review 机制，让团队里的每个人都相互学习
 - 我们有友好平等工作环境，每个人都有同等的机会，凭实力说话
